--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0 #nécessaire pour utiliser DateFormat.
   provider: ^6.1.2
+  audioplayers: ^6.1.0
+  just_audio: ^0.9.42
 
 dev_dependencies:
   flutter_test:
