--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   provider: ^6.1.2
   audioplayers: ^6.1.0
   just_audio: ^0.9.42
+  flutter_sound: ^9.16.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
